--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.8"
+    "sass": "^1.26.8",
+    "swr": "^0.2.3",
+    "use-query-params": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
