--- a/client-side-render/package.json
+++ b/client-side-render/package.json
@@ -34,6 +34,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
