--- a/server-side-render/package.json
+++ b/server-side-render/package.json
@@ -9,18 +9,19 @@
     "lint": "eslint --ext .ts,.tsx ./ --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "antd": "^4.3.5",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "dotenv": "^8.2.0",
+    "less": "3.11.1",
     "next": "9.4.4",
+    "next-images": "^1.4.0",
+    "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.8",
     "swr": "^0.2.3",
-    "antd": "^4.3.5",
-    "babel-plugin-import": "^1.13.0",
-    "dotenv": "^8.2.0",
-    "less": "3.11.1",
-    "next-images": "^1.4.0",
-    "null-loader": "^4.0.0",
     "use-query-params": "^1.1.3"
   },
   "eslintConfig": {
@@ -31,7 +32,10 @@
     "@types/react": "^16.9.36",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -41,12 +45,9 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "husky": "^4.2.5",
+    "less-vars-to-js": "^1.3.0",
     "lint-staged": "^10.2.10",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.5",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "babel-plugin-inline-react-svg": "^1.1.1",
-    "less-vars-to-js": "^1.3.0"
+    "typescript": "^3.9.5"
   }
 }
