--- a/client-side-render/package.json
+++ b/client-side-render/package.json
@@ -17,6 +17,7 @@
     "less": "3.11.1",
     "next": "9.4.4",
     "next-images": "^1.4.0",
+    "nprogress": "^0.2.0",
     "null-loader": "^4.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
