--- a/client-side-render/package.json
+++ b/client-side-render/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "dotenv": "^8.2.0",
+    "framer-motion": "^1.11.1",
     "less": "3.11.1",
     "next": "9.4.4",
     "next-images": "^1.4.0",
