--- a/client-side-rendering/package.json
+++ b/client-side-rendering/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@zeit/next-css": "^1.0.1",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
